feat: redesign homepage content and improve visual hierarchy refactor: enhance CSS design system and component behaviour
- Introduce structured Home section with engineering-focused messaging and feature cards.
- Refine About Us and Contact sections with clearer positioning, improved copy, and structured information cards.
- Remove unused navigation links for products and services.
- Expand CSS design tokens for typography, shadows, and spacing.
- Improve header behaviour with sticky positioning, transitions, and responsive scaling.
- Enhance section layout, card interactions, and hover effects for improved visual feedback and readability.
- Adjust footer typography and wording for clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
         </div>
         <nav class="header-nav">
             <a href="#home" class="nav-link active">Home</a>
-            <a href="#products" class="nav-link">Products</a>
-            <a href="#services" class="nav-link">Services</a>
             <a href="#about" class="nav-link">About Us</a>
             <a href="#contact" class="nav-link">Contact Us</a>
         </nav>
@@ -30,7 +28,32 @@
     <main id="page-container">
         <section id="home" class="section">
             <div class="section-content">
-                <p>Welcome to BitNinja Technology. Your gateway to innovative solutions.</p>
+                <h2>Home</h2>
+                <p>
+                    We develop software solutions for industrial systems and manufacturing automation, enabling organisations to integrate data-driven processes, improve operational reliability, and scale complex engineering workflows.
+                </p>
+                <div class="section-info-grid" style="margin-top: 3rem;">
+                    <article class="section-info-card">
+                        <h3>Engineering-Led Design</h3>
+                        <p>
+                            We apply analytical rigour and established engineering principles to develop software solutions that enhance operational performance and support sustainable workflows across manufacturing and industrial environments.
+                        </p>
+                    </article>
+
+                    <article class="section-info-card">
+                        <h3>Industry 4.0 Integration</h3>
+                        <p>
+                            Our platform is architected to interoperate with modern industrial systems and control networks, enabling real-time data acquisition, advanced analytics, and informed operational decision making.
+                        </p>
+                    </article>
+
+                    <article class="section-info-card">
+                        <h3>Dependable Industrial Software</h3>
+                        <p>
+                            Built on principles of robustness, predictability and security, our software ensures automated workflows operate consistently and reliably, supporting teams in mission-critical industrial environments.
+                        </p>
+                    </article>
+                </div>
             </div>
         </section>
 
@@ -39,29 +62,29 @@
                 <h2>About Us</h2>
                 <section class="section-content-wrapper">
                     <p class="section-intro">
-                        We build industrial software for Industry 4.0, combining engineering with advanced analytics to create smarter, faster and more efficient industrial systems.
+                        We develop software for industrial automation and manufacturing systems, combining engineering principles with modern computing to create solutions that enhance productivity, reliability, and operational intelligence.
                     </p>
                 </section>
 
                 <section class="section-info-grid">
                     <article class="section-info-card">
-                        <h3>Engineering & Automation</h3>
+                        <h3>Industrial Automation</h3>
                         <p>
-                            We help organisations optimise design, manufacturing, and operational workflows through software-enabled automation. Our solutions streamline processes, reduce manual effort, and improve consistency, accuracy, and scalability across complex industrial systems.
+                            We design software to optimise design workflows, manufacturing processes, and operational systems through intelligent automation. Our solutions reduce manual intervention, improve precision, and enable scalable deployment across complex industrial infrastructure.
                         </p>
                     </article>
 
                     <article class="section-info-card">
-                        <h3>Industrial Software</h3>
+                        <h3>Data-Driven Operations</h3>
                         <p>
-                            We develop software that supports informed decision-making, predictive capabilities, and adaptive behaviour in industrial environments. By integrating analytics with engineering systems, we turn operational information into actionable outcomes that support innovation and long-term performance.
+                            Our platform integrates operational data with analytical systems to support predictive capabilities and adaptive control in industrial environments. By connecting engineering systems with advanced analytics, we enable organisations to derive actionable insights and optimise performance in real-time.
                         </p>
                     </article>
 
                     <article class="section-info-card">
-                        <h3>Partnership & Quality</h3>
+                        <h3>Sustainable Partnership</h3>
                         <p>
-                            We work closely with our clients to understand their challenges and deliver reliable, future-ready software tailored to their needs. Our focus is on quality, continuous improvement, and long-term partnerships built on robust and maintainable technology.
+                            We engage directly with our clients to understand operational requirements and deliver software solutions aligned with their technical and strategic objectives. Our commitment is to sustainable partnerships built on reliable, maintainable technology and continuous engineering support.
                         </p>
                     </article>
                 </section>
@@ -71,7 +94,36 @@
         <section id="contact" class="section">
             <div class="section-content">
                 <h2>Contact Us</h2>
-                <p>Get in touch with our team for inquiries and support.</p>
+                <section class="section-content-wrapper">
+                    <p class="section-intro">
+                        We welcome inquiries regarding our industrial software solutions and engineering services. Contact our team to discuss implementation, technical requirements, or partnership opportunities.
+                    </p>
+                </section>
+                <div class="section-info-grid" style="margin-top: 2rem;">
+                    <article class="section-info-card">
+                        <h3>General Inquiries</h3>
+                        <p>
+                            <a href="mailto:info@bitninja.net" style="color: var(--primary-color); text-decoration: none; font-weight: 600;">info@bitninja.net</a>
+                        </p>
+                        <p style="color: var(--text-muted); font-size: 0.95rem; margin-top: 1rem;">
+                            For product information, technical specifications, and business proposals.
+                        </p>
+                    </article>
+
+                    <article class="section-info-card">
+                        <h3>Technical Support</h3>
+                        <p>
+                            Our technical team supports implementation, system integration, and operational troubleshooting. We provide comprehensive assistance to ensure reliable deployment and continuous operation of our solutions.
+                        </p>
+                    </article>
+
+                    <article class="section-info-card">
+                        <h3>Strategic Partnerships</h3>
+                        <p>
+                            We collaborate with systems integrators, technology partners, and industry stakeholders to extend our reach and deliver comprehensive solutions for industrial automation and engineering software challenges.
+                        </p>
+                    </article>
+                </div>
             </div>
         </section>
     </main>
@@ -80,7 +132,7 @@
         <div class="footer-content">
             <img src="images/name.png" alt="BitNinja Technology" class="footer-logo">
             <div class="footer-text">
-                <p><strong>BitNinja Technology<sup>™</sup></strong> is a trademark application of BitNinja Technology (7302564), a proprietorship registered under UDYAM-MH-26-0996429. Reach us at <a href="mailto:info@bitninja.net" target="_blank" rel="noopener noreferrer">info@bitninja.net</a>.</p>
+                <p><strong>BitNinja Technology<sup>™</sup></strong> is a trademark application of BitNinja Technology (7302564), a proprietorship registered under UDYAM-MH-26-0996429. Enquiries: <a href="mailto:info@bitninja.net" target="_blank" rel="noopener noreferrer">info@bitninja.net</a>.</p>
             </div>
         </div>
     </footer>
