feat: add Services section with reveal cards and coming soon overlay
- Introduce a new Services section highlighting upcoming products.
- Add service reveal card layout with hover-based blur and overlay transitions.
- Include OctoCAD, OctoHEAT, and OctoCAM service cards in the homepage.
- Add supporting styles for service cards, overlays, and images.
- Update and add service-related product images.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,49 @@
             </div>
         </section>
 
+        <section id="services" class="section">
+            <div class="section-content">
+                <h2>Services</h2>
+                <section class="section-info-grid">
+                    <article class="section-info-card service-reveal-card">
+                        <div class="service-content">
+                            <img class="service-image" src="images/octocad.png" alt="OctoCAD">
+                            <p>
+                                A parametric CAD customization software that automates the process of design and CAD modelling of machine elements.
+                            </p>
+                        </div>
+                        <div class="service-overlay">
+                            <p class="coming-soon">COMING SOON...</p>
+                        </div>
+                    </article>
+
+                    <article class="section-info-card service-reveal-card">
+                        <div class="service-content">
+                            <img class="service-image" src="images/octoheat.png" alt="OctoHEAT">
+                            <p>
+                                A thermal design software for automation of thermal analysis and heat transfer optimisation in manufacturing systems.
+                            </p>
+                        </div>
+                        <div class="service-overlay">
+                            <p class="coming-soon">COMING SOON...</p>
+                        </div>
+                    </article>
+
+                    <article class="section-info-card service-reveal-card">
+                        <div class="service-content">
+                            <img class="service-image" src="images/octocam.png" alt="OctoCAM">
+                            <p>
+                                A CAM solution for generating optimised tool paths and CNC machine codes for precision manufacturing operations.
+                            </p>
+                        </div>
+                        <div class="service-overlay">
+                            <p class="coming-soon">COMING SOON...</p>
+                        </div>
+                    </article>
+                </section>
+            </div>
+        </section>
+
         <section id="contact" class="section">
             <div class="section-content">
                 <h2>Contact Us</h2>
