docs: update contact information wording in index page
- Add explicit email contact link to the "Contact Us" section.
- Refine footer contact phrasing for clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="section-content">
                 <h2>Contact Us</h2>
                 <p>
-                    We welcome inquiries regarding our industrial software solutions and engineering services. Contact our team to discuss implementation, technical requirements, or partnership opportunities.
+                    We welcome inquiries regarding our industrial software solutions and engineering services. Contact our team to discuss implementation, technical requirements, or partnership opportunities. Write us at <a href="mailto:info@bitninja.net">info@bitninja.net</a>.
                 </p>
                 <div class="section-info-grid" style="margin-top: 2rem;">
                     <article class="section-info-card">
@@ -147,7 +147,7 @@
         <div class="footer-content">
             <img src="images/name.png" alt="BitNinja Technology" class="footer-logo">
             <div class="footer-text">
-                <p><strong>BitNinja Technology<sup>™</sup></strong> is a trademark application of BitNinja Technology (7302564), a proprietorship registered under UDYAM-MH-26-0996429. Enquiries: <a href="mailto:info@bitninja.net" target="_blank" rel="noopener noreferrer">info@bitninja.net</a>.</p>
+                <p><strong>BitNinja Technology<sup>™</sup></strong> is a trademark application of BitNinja Technology (7302564), a proprietorship registered under UDYAM-MH-26-0996429. Reach us at <a href="mailto:info@bitninja.net" target="_blank" rel="noopener noreferrer">info@bitninja.net</a>.</p>
             </div>
         </div>
     </footer>
